# moments-app

./: .editorconfig  .gitignore  .tool-versions  app.py  cdk.context.json  cdk.json  makefile  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: build.yml  cdk-deployment.yml
common/: constants.py  stack_context.py
lambdas/: Dockerfile  gmail_ingestor.py  gmail_processor.py  gmail_retriever.py  hello.py
layers/common/: requirements.txt
moments_app/: moments_app_stack.py
networking/: networking_stack.py
tests/unit/: governance_checks.py  governance_test_helpers.py  stack_test_helpers.py  test_moments_app_stack.py
tests/unit/snapshots/test_stack_snapshot/synthesized/: MomentsAppStack.template.json
