

[tool.poetry]
name = "moments-cdk-app"
version = "0.1.0"
description = "My Moments CDK app"
authors = ["iamjustinthecloud <iamjustinthecloud@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aws-cdk-lib = ">=2.219.0,<3.0.0"
constructs = "^10.4.2,<11.0.0"
boto3 = "^1.40.45,<2.0.0"
attrs = ">=25.3.0,<26.0.0"
mdutils = ">=1.8.0,<2.0.0"
schema = ">=0.7.7,<0.8.0"
aws-lambda-powertools = "^3.21.0"

[tool.pyright]
typeCheckingMode = "basic"
reportArgumentType = "none"
reportCallIssue = "none"
reportMissingImports = true
reportUnknownMemberType = true
reportUnknownParameterType = false
reportUnknownVariableType = true


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-snapshot = "^0.9.0"
colorlog = "^6.9.0"
pytest-sugar = "^1.1.1"
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.black]
line-length = 90
target-version = ['py312']

[tool.ruff]
line-length = 90
extend-select = ["I"]
fix = true
show-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
